# evren-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: publish.yml
evren_sdk/: __init__.py  client.py  edge.py  exceptions.py  models.py  ws_client.py
examples/: 01_quickstart.py  02_batch_inference.py  03_result_export.py  04_benchmark.py  05_edge_camera.py  06_upload_to_dataset.py  07_async_pipeline.py
