[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evren-sdk"
version = "0.6.1"
description = "EVREN MLOps Platform — Python inference SDK for object detection, classification, and segmentation models."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Serkan Peker", email = "serkan.peker@crudfab.com" },
]
maintainers = [
    { name = "Serkan Peker", email = "serkan.peker@crudfab.com" },
]
keywords = [
    "evren", "mlops", "inference", "object-detection",
    "yolo", "computer-vision", "sdk", "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
edge = ["opencv-python>=4.8", "websockets>=12.0"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.urls]
Homepage = "https://evren.ssyz.org.tr"
Documentation = "https://docs.ssyz.org.tr/sdk"
Repository = "https://gitlab.crudfab.com/ssb/ssyz/evren/platform"
Changelog = "https://gitlab.crudfab.com/ssb/ssyz/evren/platform/-/blob/main/sdk/CHANGELOG.md"
Issues = "https://gitlab.crudfab.com/ssb/ssyz/evren/platform/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["evren_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
